Funcons-beta/Computations/Abnormal/Failing/tests/defined.config
general {
    funcon-term: 
      finalise-failing
      sequential(
        effect(checked(42)), print 1,
        else(checked(sequential(print(2),lookup(map-empty,"x"))), print 3)
      )
        ;
}

tests {
    result-term: null-value;
    standard-out: [1, 2, 3];
}
